--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -73,7 +73,7 @@ h3 {
   background-color: #f5f4f0;
 }
 
-.background::before {
+.background-img::before {
   position: absolute;
   top: 0;
   right: 0;
@@ -147,4 +147,33 @@ h3 {
 
 .column p {
   margin: 1em 0;
+}
+
+/* ------------------------ */
+.video {
+  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
+}
+
+.background-white {
+  background-color: #fff;
+}
+
+.background-primary-dark {
+  background-color: #42413c;
+}
+
+.center {
+  text-align: center;
+}
+
+.margin-top-bottom-30 {
+  margin: 30px 0;
+}
+
+.margin-bottom-200 {
+  margin-bottom: -200px;
+}
+
+.padding-top-200 {
+  padding-top: 200px;
 }
