--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -177,3 +177,66 @@ h3 {
 .padding-top-200 {
   padding-top: 200px;
 }
+
+.card {
+  box-sizing: border-box;
+  width: 350px;
+
+  background: #f5f4f0;
+}
+
+.card-content {
+  padding: 24px;
+}
+
+.card-number {
+  margin-bottom: 40px;
+
+  color: #42413c;
+
+  font-size: 64px;
+  font-family: Neucha, sans-serif;
+  line-height: 1;
+}
+
+.card p {
+  color: #2a2626;
+}
+
+.card h3 {
+  margin-bottom: 16px;
+
+  color: #fe8a02;
+}
+
+.card h2 {
+  font-size: 52px;
+}
+
+.card-header {
+  background: #42413c;
+}
+
+.color-white {
+  color: #fff;
+}
+
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 20px;
+
+  column-gap: 30px;
+}
+
+.card-link:hover {
+  color: #fff;
+
+  background-color: #fe8a02;
+}
+
+.card-link:hover h3,
+.card-link:hover .card-number,
+.card-link:hover p {
+  color: #fff;
+}
