Add a premature-optimization section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -294,3 +294,11 @@ header .column p {
 .color-secondary {
   color: #908d8b;
 }
+
+.color-white-50 {
+  color: #d7ccc0;
+}
+
+.color-brown {
+  color: #b09a81;
+}
